2006-11-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimppropwidgets.c (gimp_prop_color_button_new): typo.

2006-11-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tiff.c (load_image) (save_image): set the
	warning and error handlers after opening the file. We get two
	errors otherwise.

2006-11-27  Sven Neumann  <sven@gimp.org>

	* app/base/color-balance.c (color_balance_transfer_init): applied
	patch from Saul Goode (bug #379611), then cleaned up further.

2006-11-26  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c (is_integer): Fix revealed
	bug in TinyScheme initialization which results in a seg fault.
	Removing fix for now.

2006-11-26  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c (is_integer): Check cell
	type for T_NUMBER in addition to checking if it is an integer.
	Fixes TinyScheme bug #1593861 reported on SourceForge. Fixed
	prototype for dump_mark_stack(). Quieted compiler warnings.

	* plug-ins/script-fu/scripts/script-fu-compat.init: Added delq,
	prin1, and print.

2006-11-25  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpbrushclipboard.c
	* app/core/gimppatternclipboard.c
	* app/core/gimptooloptions.c
	* app/core/gimpundo.c
	* app/widgets/gimpdevicestatus.c
	* app/widgets/gimpdock.c
	* app/widgets/gimpimageparasiteview.c
	* app/widgets/gimpimagepropview.c: no need to cast the return
	value of g_value_get_object(), it's a gpointer.

2006-11-24  Kevin Cozens  <kcozens@cvs.gnome.org>

	* app/pdb/gimpprocedure.c: Fix for minor typo in error message.

	* plug-ins/Lighting/lighting_main.c (check_drawables): Only validate
	ID's for drawables that will be used. Disable use of env map (and not
	bump map) if env drawable is of wrong type.

	* plug-ins/script-fu/ftx/ftx.c: Eliminated some compiler warnings.

2006-11-25  Simon Budig  <simon@gimp.org>

	* libgimpwidgets/gimpresolutionentry.c
	* libgimpwidgets/gimpwidgets.def: fix typo in a function name.
